2008-03-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.[ch]: Small clean ups and refactoring.
	Use gulong instead of guint, so we have a bigger id space for
	the timelines inside a Score.

2008-03-19  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-actor.c:
	(_clutter_actor_apply_modelview_transform), (clutter_actor_paint):
	Apply clip inside paint function instead of transform function

2008-03-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.c: Update documentation.

2008-03-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.[ch]: Remove all the API changes, and
	just add a clutter_score_append_at_marker(); the implementation
	remains the same, but the marker must be explicitly created by
	the developer. The ids are no longer used to create implicit
	markers, so they can return to be unsigned integers. (#450)

	* clutter/clutter-timeline.[ch]:
	(clutter_timeline_has_marker): Add a function to query a timeline
	for a marker being set.

	* tests/test-score.c (main): Update with the API changes.

	* clutter.symbols: Update exported symbols.

2008-03-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-texture.c: Small clean ups in the coding style.

2008-03-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Add new symbols

	* clutter/clutter-score.[ch]: Use the newly added marker API
	on the timelines to implement attaching timelines at specific
	points, using either milliseconds or frames.

	* tests/test-score.c (main): Test the new API.

2008-03-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-marshal.list: Add signature for the
	::marker-reached signal marshaller.

	* clutter/clutter-timeline.[ch]: Add timeline marker API;
	using markers it is possible to add a unique identifier to
	a particular frame of the timeline, and receive a signal
	notification when reaching that particular marker while
	playing the timeline. (#641)
